Fixed layout attributes
#comment Some attributes have been fixed on messages_list_item_new.xml since they had a wrong format which was leading to a build failure for Release buils
Affected: messages_list_item_new.xml

Ticket: none

--- a/app/src/main/res/layout/messages_list_item_new.xml
+++ b/app/src/main/res/layout/messages_list_item_new.xml
@@ -59,7 +59,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:src="@drawable/inbox_check_selector"
-                android:tint="@color/dark_purple"
+                app:tint="@color/dark_purple"
 				tools:visibility="gone"
 			/>
 
@@ -195,8 +195,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 app:layout_constraintTop_toBottomOf="@+id/messageTitleContainerLinearLayout"
                 app:layout_constraintLeft_toRightOf="@+id/checkboxImageView"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_below="@id/message_title_container"
-                android:layout_toEndOf="@id/checkbox"
                 android:gravity="top"
                 android:orientation="horizontal">
 
