Converted account settings tests to kotlin.
Migrate Composer and Login tests to new test structure.
Introduced BaseTest class. Refactor existing tests.

--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -38,6 +38,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         tools:visibility="visible"/>
 
     <RelativeLayout
+        android:id="@+id/menuItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?attr/selectableItemBackground"
