Improve test architecture for better navigation and robots structure.

--- a/app/src/main/res/layout/contacts_v2_list_item.xml
+++ b/app/src/main/res/layout/contacts_v2_list_item.xml
@@ -91,6 +91,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
         <!-- First line -->
         <LinearLayout
+            android:id="@+id/contact_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
