--- a/app/src/main/res/layout/drawer_user_list_item.xml
+++ b/app/src/main/res/layout/drawer_user_list_item.xml
@@ -32,6 +32,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:background="@color/iron_gray" />
 
     <RelativeLayout
+        android:id="@+id/drawerUserItem"
         android:layout_above="@id/divider"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -53,7 +54,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true">
+            android:layout_centerVertical="true"
+            android:visibility="gone">
 
             <ch.protonmail.android.views.CustomFontButton
                 android:id="@+id/userSignIn"
@@ -69,6 +71,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 android:paddingEnd="@dimen/fields_default_space"
                 android:paddingRight="@dimen/fields_default_space"
                 android:text="@string/sign_in"
+                android:visibility="gone"
                 app:fontName="Roboto-Regular.ttf"
                 tools:visibility="gone" />
 
