--- a/app/src/main/res/layout/labels_circle_list_item.xml
+++ b/app/src/main/res/layout/labels_circle_list_item.xml
@@ -29,15 +29,14 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/fields_default_space_small">
 
-    <ch.protonmail.android.views.ThreeStateCheckBox
+    <CheckBox
         android:id="@+id/label_check"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:button="@drawable/custom_labels_checkbox"
         android:padding="0dp" />
 
     <ImageView
