--- a/app/src/main/res/layout/labels_list_item.xml
+++ b/app/src/main/res/layout/labels_list_item.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (c) 2020 Proton Technologies AG
 
 This file is part of ProtonMail.
@@ -21,29 +20,29 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/fields_default_space_small"
-    android:paddingTop="@dimen/fields_default_space_small">
+    android:paddingTop="@dimen/fields_default_space_small"
+    android:paddingBottom="@dimen/fields_default_space_small">
 
-    <ch.protonmail.android.views.ThreeStateCheckBox
+    <ch.protonmail.android.views.ThreeStateButton
         android:id="@+id/label_check"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/custom_check_box_size"
+        android:layout_height="@dimen/custom_check_box_size"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="10dp"
-        android:gravity="right"
-        android:padding="0dp"/>
+        android:gravity="end"
+        android:padding="0dp" />
 
     <TextView
         android:id="@+id/label_selected_messages"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_toStartOf="@id/label_check"
         android:padding="0dp"
         android:textColor="@color/icon_purple"
-        android:layout_centerVertical="true"
         android:textSize="@dimen/h2"
-        tools:text="Label name"/>
+        tools:text="Label name" />
 
     <TextView
         android:id="@+id/label_name"
