Minor refactoring around contact db tables and contcts list item.
MAILAND-704

--- a/app/src/main/res/layout/contacts_list_item.xml
+++ b/app/src/main/res/layout/contacts_list_item.xml
@@ -40,7 +40,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:textSize="@dimen/h4" />
 
         <TextView
-            android:id="@+id/contact_email"
+            android:id="@+id/contact_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/iron_gray"
