--- a/app/src/main/res/layout/contacts_v2_list_item.xml
+++ b/app/src/main/res/layout/contacts_v2_list_item.xml
@@ -134,7 +134,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         <!-- Second line -->
         <TextView
             style="@style/App.Text.Caption"
-            android:id="@+id/contact_email"
+            android:id="@+id/contact_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
