Added touch feedback to download attachment button and reformatted AttachmentDetailView.
MAILAND-1337

--- a/app/src/main/res/layout/view_attachment_detail.xml
+++ b/app/src/main/res/layout/view_attachment_detail.xml
@@ -30,10 +30,10 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_margin="4dp"
         android:background="@android:color/transparent"
         android:textSize="@dimen/abc_text_size_large_material"
-        android:tint="@color/icon_purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/icon_purple"
         tools:src="@drawable/mail_attachment_jpeg" />
 
     <TextView
@@ -51,8 +51,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:indeterminate="true"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/attachment_specific_icon"
@@ -65,12 +65,12 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         style="@style/AttachmentText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/attachment_specific_icon"
         app:layout_constraintEnd_toStartOf="@+id/attachment_size"
         app:layout_constraintStart_toEndOf="@+id/attachment_download_progress"
@@ -97,7 +97,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_margin="8dp"
-        android:background="@android:color/transparent"
+        android:background="?attr/selectableItemBackground"
+        android:padding="2dp"
         android:src="@drawable/mail_download"
         app:layout_constraintBottom_toBottomOf="@+id/attachment_size"
         app:layout_constraintEnd_toEndOf="parent"
