Split the "no connectivity" snack bar into two by introducing an enum abut the different states of connectivity..
MAILAND-1235

#comment Affected: App behaviour when offline and when domain blocked..

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -80,6 +80,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
     <color name="red">#BF0000</color>
     <color name="red_orange">#EA644C</color>
+    <color name="orange">#D9804B</color>
     <color name="green">#A2C276</color>
     <color name="blue">#7569D1</color>
     <color name="yellow">#EDCF54</color>
