Add mailbox view UI to v4 flavor
Added a new v4 design for the mailbox view and made it work with the existing logic.

MAILAND-1495

--- a/app/src/main/res/layout/activity_compose_message.xml
+++ b/app/src/main/res/layout/activity_compose_message.xml
@@ -456,7 +456,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
     <View
         android:orientation="vertical"
-        android:id="@+id/screenProtector"
+        android:id="@+id/screenProtectorView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
