--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -56,7 +56,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:background="@drawable/actionbar_shadow" />
 
     <View
-        android:id="@+id/screenProtector"
+        android:id="@+id/screenProtectorView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
