--- a/app/src/v4/res/drawable/ic_compose.xml
+++ b/app/src/v4/res/drawable/ic_compose.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,12 +17,16 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <application
-        android:theme="@style/ProtonTheme.Mail"
-        tools:replace="android:theme" />
-
-</manifest>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="40dp"
+    android:height="40dp"
+    android:viewportWidth="40"
+    android:viewportHeight="40">
+  <path
+      android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
+      android:fillColor="@color/interaction_strong"/>
+  <path
+      android:pathData="M30.964,14.5153L27.2722,10.8198L18.7209,19.3915L18.18,23.628L22.413,23.0866L30.964,14.5153ZM20.1859,20.1105L27.273,13.0066L28.7809,14.516L21.6934,21.6203L19.9649,21.8414L20.1859,20.1105ZM21.8837,11.6405H11V29.1856H28.5451V21.0797H27.0001V27.6406H12.545V13.1855H21.8837V11.6405Z"
+      android:fillColor="@color/icon_inverted"
+      android:fillType="evenOdd"/>
+</vector>
