--- a/app/src/v4/res/drawable/ic_forward.xml
+++ b/app/src/v4/res/drawable/ic_forward.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,12 +17,13 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <application
-        android:theme="@style/ProtonTheme.Mail"
-        tools:replace="android:theme" />
-
-</manifest>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="16dp"
+    android:height="16dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
+  <path
+      android:pathData="M2.0004,7.94V9V10C3.0004,10 5.93,10 5.92,9.99L8.63,10V12.8L14.54,7.94L8.63,3.23V6L2.0005,6L2.0009,7C2.0004,7.94 2.0004,7.94 2.0004,7.94ZM3.0004,9C3.0004,9 3.0004,7.5 3.0004,7H5.93H9.63V5.3L13,8L9.63,10.68V9H5.93H3.9404H3.0004Z"
+      android:fillColor="@color/icon_norm"
+      android:fillType="evenOdd"/>
+</vector>
