--- a/app/src/v4/res/drawable/ic_hamburger.xml
+++ b/app/src/v4/res/drawable/ic_hamburger.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,12 +17,18 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <application
-        android:theme="@style/ProtonTheme.Mail"
-        tools:replace="android:theme" />
-
-</manifest>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="16dp"
+    android:height="14dp"
+    android:viewportWidth="16"
+    android:viewportHeight="14">
+  <path
+      android:pathData="M0.5,0H15.5V1.5H0.5V0Z"
+      android:fillColor="@color/icon_norm"/>
+  <path
+      android:pathData="M0.5,6H15.5V7.5H0.5V6Z"
+      android:fillColor="@color/icon_norm"/>
+  <path
+      android:pathData="M15.5,12H0.5V13.5H15.5V12Z"
+      android:fillColor="@color/icon_norm"/>
+</vector>
