--- a/app/src/v4/res/drawable/ic_send.xml
+++ b/app/src/v4/res/drawable/ic_send.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,12 +17,13 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <application
-        android:theme="@style/ProtonTheme.Mail"
-        tools:replace="android:theme" />
-
-</manifest>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="16dp"
+    android:height="16dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
+  <path
+      android:pathData="M0.25,6.2799L6.35,9.3299L9.4,15.4299L14.74,0.9399L0.25,6.2799ZM2.77,6.4199L11.93,2.9999L6.62,8.3499L2.77,6.4199ZM9.26,12.9199L7.33,9.0599L12.64,3.7499L9.26,12.9199Z"
+      android:fillColor="@color/icon_norm"
+      android:fillType="evenOdd"/>
+</vector>
