--- a/app/src/v4/res/drawable/list_divider.xml
+++ b/app/src/v4/res/drawable/list_divider.xml
@@ -18,12 +18,12 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<manifest
+<shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:shape="rectangle">
 
-    <application
-        android:theme="@style/ProtonTheme.Mail"
-        tools:replace="android:theme" />
+    <solid android:color="@color/separator_norm" />
 
-</manifest>
+    <size android:height="1dp" />
+
+</shape>
