--- a/app/src/v4/res/drawable/selector_unread_messages_status_text_color.xml
+++ b/app/src/v4/res/drawable/selector_unread_messages_status_text_color.xml
@@ -18,12 +18,15 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<selector
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application
-        android:theme="@style/ProtonTheme.Mail"
-        tools:replace="android:theme" />
+    <item
+        android:color="@color/cornflower_blue"
+        android:state_checked="false" />
 
-</manifest>
+    <item
+        android:color="@color/text_inverted"
+        android:state_checked="true" />
+
+</selector>
