--- a/app/src/v4/res/layout/layout_search_action.xml
+++ b/app/src/v4/res/layout/layout_search_action.xml
@@ -18,12 +18,17 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<manifest
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_width="@dimen/toolbar_action_layout_size"
+    android:layout_height="@dimen/toolbar_action_layout_size">
 
-    <application
-        android:theme="@style/ProtonTheme.Mail"
-        tools:replace="android:theme" />
+    <ImageView
+        android:id="@+id/searchImageView"
+        android:layout_width="@dimen/button_nav_size"
+        android:layout_height="@dimen/button_nav_size"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_search"
+        android:contentDescription="@null" />
 
-</manifest>
+</FrameLayout>
