--- a/app/src/v4/res/menu/mailbox_options_menu.xml
+++ b/app/src/v4/res/menu/mailbox_options_menu.xml
@@ -18,12 +18,20 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<manifest
+<menu
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <application
-        android:theme="@style/ProtonTheme.Mail"
-        tools:replace="android:theme" />
+    <item
+        android:id="@+id/search"
+        android:title="@string/search"
+        app:actionLayout="@layout/layout_search_action"
+        app:showAsAction="ifRoom" />
 
-</manifest>
+    <item
+        android:id="@+id/compose"
+        android:title="@string/compose_message"
+        app:actionLayout="@layout/layout_compose_action"
+        app:showAsAction="ifRoom" />
+
+</menu>
